--- a/stable/metrics/values.yaml
+++ b/stable/metrics/values.yaml
@@ -2,7 +2,7 @@
 dockerRepository: registry.suse.com
 dockerOrganization: cap
 dockerRegistrySecret: regsecret
-imageTag: 1.2.0-bc511c9-cap
+imageTag: 1.3.0-4c982f3-cap
 imagePullPolicy: IfNotPresent
 
 metrics:
@@ -62,6 +62,8 @@ cloudFoundry:
 # The firehose exporter collects data from Cloud Foundry and sends it to Prometheus
 firehoseExporter:
   enabled: true
+  # Should we exit on error - pod will then get rescheduled
+  exitOnError: true
   instances: 1
   # URL of the Doppler Endpoint - takes precendence if set over the API Endpoint
   dopplerUrl:
@@ -115,29 +117,31 @@ prometheus:
   pushgateway:
     enabled: false
   configmapReload:
-    image:
-      repository: registry.suse.com/cap/stratos-metrics-configmap-reload
-      tag: 1.2.0-bc511c9-cap
+    prometheus:
+      image:
+        repository: registry.suse.com/cap/stratos-metrics-configmap-reload
+        tag: 1.3.0-4c982f3-cap
   initChownData:
     image:
       repository: registry.suse.com/cap/stratos-metrics-init-chown-data
-      tag: 1.2.0-bc511c9-cap
+      tag: 1.3.0-4c982f3-cap
   kubeStateMetrics:
     enabled: false
+  kube-state-metrics:
     image:
       repository: registry.suse.com/cap/stratos-metrics-kube-state-metrics
-      tag: 1.2.0-bc511c9-cap
+      tag: 1.3.0-4c982f3-cap
   nodeExporter:    
     enabled: false
     image:
       repository: registry.suse.com/cap/stratos-metrics-node-exporter
-      tag: 1.2.0-bc511c9-cap
+      tag: 1.3.0-4c982f3-cap
   server:
     name: prometheus
     configMapOverrideName: stratos-metrics-config
     image:
       repository: registry.suse.com/cap/stratos-metrics-prometheus
-      tag: 1.2.0-bc511c9-cap
+      tag: 1.3.0-4c982f3-cap
     replicaCount: 1
     service:
       servicePort: 9090
