--- a/stable/cert-exporter/values.yaml
+++ b/stable/cert-exporter/values.yaml
@@ -41,8 +41,11 @@ customSecret:
       namespace:
       # Secret globs to include when looking for secret data keys (optional).
       includeKeys: []
+      # - "*.crt"
+      # - "*.pem"
       # Secret globs to exclude when looking for secret data keys (optional).
       excludeKeys: []
+      # - "*.key"
       # Label selector to find secrets to publish as metrics (optional).
       # Annotation selector to find secrets to publish as metrics (optional).
       # If both labelSelector and annotationSelector configured, the cert-exporter
