--- a/stable/console/templates/deployment.yaml
+++ b/stable/console/templates/deployment.yaml
@@ -59,7 +59,7 @@ spec:
 {{- end }}
 {{- end }}
       containers:
-      - image: {{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/{{.Values.images.console}}:4.2.0-6344c739d-cap
+      - image: {{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/{{.Values.images.console}}:4.2.1-52f5e5081-cap
         imagePullPolicy: {{.Values.imagePullPolicy}}
         name: ui
         ports:
@@ -71,7 +71,7 @@ spec:
           protocol: TCP
         env:
         - name: STRATOS_IMAGE_REF
-          value: "4.2.0-6344c739d-cap:{{ .Release.Revision }}"
+          value: "4.2.1-52f5e5081-cap:{{ .Release.Revision }}"
         - name: CONSOLE_CERT_PATH
           value: "/{{ .Release.Name }}-cert-volume"
         - name: SSL_PROTOCOLS
@@ -82,12 +82,12 @@ spec:
         - mountPath: "/{{ .Release.Name }}-cert-volume"
           name: "{{ .Release.Name }}-cert-volume"
           readOnly: true
-      - image: {{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/{{.Values.images.proxy}}:4.2.0-6344c739d-cap
+      - image: {{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/{{.Values.images.proxy}}:4.2.1-52f5e5081-cap
         imagePullPolicy: {{.Values.imagePullPolicy}}
         name: proxy
         env:
         - name: STRATOS_IMAGE_REF
-          value: "4.2.0-6344c739d-cap:{{ .Release.Revision }}"
+          value: "4.2.1-52f5e5081-cap:{{ .Release.Revision }}"
         - name: STRATOS_HELM_RELEASE
           value: "{{ .Release.Name }}"
         - name: DB_USER
@@ -299,7 +299,7 @@ spec:
         - name: STRATOS_KUBERNETES_NAMESPACE
           value: "{{ .Release.Namespace }}"
         - name: STRATOS_KUBERNETES_TERMINAL_IMAGE
-          value: "{{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/stratos-kube-terminal:4.2.0-6344c739d-cap"
+          value: "{{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/stratos-kube-terminal:4.2.1-52f5e5081-cap"
         - name: STRATOS_KUBERNETES_DASHBOARD_IMAGE
           value: "{{.Values.console.kubeDashboardImage}}"        
         - name: ARTIFACT_HUB_DISABLED
@@ -345,7 +345,7 @@ spec:
       - name: "{{ .Release.Name }}-cert-volume"
         secret:
           {{- if .Values.console.tlsSecretName }}
-          secretName: "{{ .Values.console.tlsSecretName }}"
+          secretName: "{{ .values.console.tlsSecretName }}"
           {{- else }}
           secretName: "{{ .Release.Name }}-cert"
           {{- end }}
