Update SUSE Private Registry helm chart to 1.5
The 1.5 helm chart version is largely based on the upstream Harbor
1.5 helm chart (https://github.com/goharbor/harbor-helm/tree/v1.5.1).

(transferred from the registry.suse.com/harbor/harbor:1.5 helm chart)

--- a/stable/harbor/templates/database/database-ss.yaml
+++ b/stable/harbor/templates/database/database-ss.yaml
@@ -32,6 +32,7 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      automountServiceAccountToken: false
       initContainers:
       - name: "change-permission-of-directory"
         securityContext:
@@ -72,9 +73,12 @@ spec:
         resources:
 {{ toYaml .Values.database.internal.resources | indent 10 }}
 {{- end }}
-        envFrom:
-          - secretRef:
-              name: "{{ template "harbor.database" . }}"
+        env:
+          - name: POSTGRES_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: "{{ template "harbor.database" . }}"
+                key: POSTGRES_PASSWORD
         volumeMounts:
         - name: database-data
           mountPath: /var/lib/postgresql/data
