--- a/stable/harbor/Chart.yaml
+++ b/stable/harbor/Chart.yaml
@@ -1,20 +1,17 @@
-#!BuildTag: registry/harbor:latest
-#!BuildTag: registry/harbor:1.4.2
-#!BuildTag: registry/harbor:1.4.2-build%RELEASE%
 apiVersion: v1
-name: harbor
-version: 1.4.2
-appVersion: 2.0.2
-description: An open source trusted cloud native registry that stores, signs, and scans content
+appVersion: 2.1.1
+description: An open source trusted cloud native registry that stores, signs, and
+  scans content
+home: https://goharbor.io
+icon: https://raw.githubusercontent.com/goharbor/website/master/static/img/logos/harbor-icon-color.png
 keywords:
 - docker
 - registry
 - harbor
-home: https://goharbor.io
-icon: https://raw.githubusercontent.com/goharbor/website/master/static/img/logos/harbor-icon-color.png
-sources:
-- https://github.com/SUSE/registry
 maintainers:
-- name: SUSE Ecosystem Team
-  email: ecosystem@suse.de
-engine: gotpl
+- email: ecosystem@suse.de
+  name: SUSE Ecosystem Team
+name: harbor
+sources:
+- https://github.com/goharbor/harbor-helm
+version: 1.5.1
