--- a/stable/harbor/templates/chartmuseum/chartmuseum-dpl.yaml
+++ b/stable/harbor/templates/chartmuseum/chartmuseum-dpl.yaml
@@ -26,6 +26,7 @@ spec:
         checksum/configmap: {{ include (print $.Template.BasePath "/chartmuseum/chartmuseum-cm.yaml") . | sha256sum }}
         checksum/secret: {{ include (print $.Template.BasePath "/chartmuseum/chartmuseum-secret.yaml") . | sha256sum }}
         checksum/secret-core: {{ include (print $.Template.BasePath "/core/core-secret.yaml") . | sha256sum }}
+        checksum/secret-redis: {{ include (print $.Template.BasePath "/redis/secret.yaml") . | sha256sum }}
 {{- if and .Values.internalTLS.enabled (eq .Values.internalTLS.certSource "auto") }}
         checksum/tls: {{ include (print $.Template.BasePath "/internal/auto-tls.yaml") . | sha256sum }}
 {{- else if and .Values.internalTLS.enabled (eq .Values.internalTLS.certSource "manual") }}
@@ -44,6 +45,7 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      automountServiceAccountToken: false
       containers:
       - name: chartmuseum
         image: {{ .Values.chartmuseum.image.repository }}:{{ .Values.chartmuseum.image.tag }}
@@ -84,17 +86,25 @@ spec:
           - name: INTERNAL_TLS_ENABLED
             value: "true"
           - name: INTERNAL_TLS_KEY_PATH
-            value: /etc/harbor/ssl/chartmuseum.key
+            value: /etc/harbor/ssl/chartmuseum/tls.key
           - name: INTERNAL_TLS_CERT_PATH
-            value: /etc/harbor/ssl/chartmuseum.crt
+            value: /etc/harbor/ssl/chartmuseum/tls.crt
           - name: INTERNAL_TLS_TRUST_CA_PATH
-            value: /harbor_cust_cert/harbor_internal_ca.crt
+            value: /etc/harbor/ssl/chartmuseum/ca.crt
           {{- end }}
           - name: BASIC_AUTH_PASS
             valueFrom:
               secretKeyRef:
                 name: {{ template "harbor.core" . }}
                 key: secret
+          - # Needed to make AWS' client connect correctly (see https://github.com/helm/chartmuseum/issues/280)
+            name: AWS_SDK_LOAD_CONFIG
+            value: "1"
+          - name: CACHE_REDIS_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: {{ template "harbor.redis" . }}
+                key: REDIS_PASSWORD
         ports:
         - containerPort: {{ template "harbor.chartmuseum.containerPort" . }}
         volumeMounts:
@@ -103,14 +113,7 @@ spec:
           subPath: {{ .Values.persistence.persistentVolumeClaim.chartmuseum.subPath }}
         {{- if .Values.internalTLS.enabled }}
         - name: chart-internal-certs
-          mountPath: /harbor_cust_cert/harbor_internal_ca.crt
-          subPath: ca.crt
-        - name: chart-internal-certs
-          mountPath: /etc/harbor/ssl/chartmuseum.crt
-          subPath: tls.crt
-        - name: chart-internal-certs
-          mountPath: /etc/harbor/ssl/chartmuseum.key
-          subPath: tls.key
+          mountPath: /etc/harbor/ssl/chartmuseum
         {{- end }}
         {{- if and .Values.persistence.enabled (eq .Values.persistence.imageChartStorage.type "gcs") }}
         - name: gcs-key
