--- a/stable/harbor/templates/clair/clair-dpl.yaml
+++ b/stable/harbor/templates/clair/clair-dpl.yaml
@@ -19,6 +19,8 @@ spec:
         component: clair
       annotations:
         checksum/secret: {{ include (print $.Template.BasePath "/clair/clair-secret.yaml") . | sha256sum }}
+        checksum/secret-redis: {{ include (print $.Template.BasePath "/redis/secret.yaml") . | sha256sum }}
+        checksum/secret-database: {{ include (print $.Template.BasePath "/database/database-secret.yaml") . | sha256sum }}
 {{- if and .Values.internalTLS.enabled (eq .Values.internalTLS.certSource "auto") }}
         checksum/tls: {{ include (print $.Template.BasePath "/internal/auto-tls.yaml") . | sha256sum }}
 {{- else if and .Values.internalTLS.enabled (eq .Values.internalTLS.certSource "manual") }}
@@ -37,6 +39,30 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      automountServiceAccountToken: false
+      initContainers:
+      - name: "inject-config-db-url"
+        securityContext:
+          runAsUser: 0
+        image: {{ .Values.clair.clair.image.repository }}:{{ .Values.clair.clair.image.tag }}
+        imagePullPolicy: {{ .Values.imagePullPolicy }}
+        env:
+        - name: DB_URL
+          valueFrom:
+              secretKeyRef:
+                name: {{ template "harbor.database" . }}
+                key: POSTGRES_URL_CLAIR
+        command: [
+            "sh",
+            "-ce",
+            'cp /tmp/config-in/config.yaml /tmp/config/config.yaml &&
+             sed -i \"s,\$DB_URL,$DB_URL,g\" /tmp/config/config.yaml' ]
+        volumeMounts:
+        - name: config-in
+          mountPath: /tmp/config-in/config.yaml
+          subPath: config.yaml
+        - name: config
+          mountPath: /tmp/config
       containers:
       - name: clair
         image: {{ .Values.clair.clair.image.repository }}:{{ .Values.clair.clair.image.tag }}
@@ -75,14 +101,7 @@ spec:
           subPath: config.yaml
         {{- if .Values.internalTLS.enabled }}
         - name: clair-internal-certs
-          mountPath: /harbor_cust_cert/harbor_internal_ca.crt
-          subPath: ca.crt
-        - name: clair-internal-certs
-          mountPath: /etc/harbor/ssl/clair_adapter.crt
-          subPath: tls.crt
-        - name: clair-internal-certs
-          mountPath: /etc/harbor/ssl/clair_adapter.key
-          subPath: tls.key
+          mountPath: /etc/harbor/ssl/clair
         {{- end }}
         {{- if .Values.caBundleSecretName }}
 {{ include "harbor.caBundleVolumeMount" . | indent 8 }}
@@ -110,23 +129,23 @@ spec:
           value: "http://127.0.0.1:6060"
         - name: SCANNER_STORE_REDIS_URL
           valueFrom:
-              secretKeyRef:
-                name: {{ template "harbor.clair" . }}
-                key: redis
+            secretKeyRef:
+              name: {{ template "harbor.redis" . }}
+              key: REDIS_URL_CLAIR
         - name: SCANNER_CLAIR_DATABASE_URL
           valueFrom:
-              secretKeyRef:
-                name: {{ template "harbor.clair" . }}
-                key: database
+            secretKeyRef:
+              name: {{ template "harbor.database" . }}
+              key: POSTGRES_URL_CLAIR
         {{- if .Values.internalTLS.enabled }}
         - name: INTERNAL_TLS_ENABLED
           value: "true"
         - name: SCANNER_API_SERVER_ADDR
           value: ":8443"
         - name: SCANNER_API_SERVER_TLS_KEY
-          value: /etc/harbor/ssl/clair_adapter.key
+          value: /etc/harbor/ssl/clair/tls.key
         - name: SCANNER_API_SERVER_TLS_CERTIFICATE
-          value: /etc/harbor/ssl/clair_adapter.crt
+          value: /etc/harbor/ssl/clair/tls.crt
         {{- end }}
         - name: SCANNER_LOG_LEVEL
           value: "{{ .Values.logLevel }}"
@@ -140,23 +159,18 @@ spec:
         volumeMounts:
         {{- if .Values.internalTLS.enabled }}
         - name: clair-internal-certs
-          mountPath: /harbor_cust_cert/harbor_internal_ca.crt
-          subPath: ca.crt
-        - name: clair-internal-certs
-          mountPath: /etc/harbor/ssl/clair_adapter.crt
-          subPath: tls.crt
-        - name: clair-internal-certs
-          mountPath: /etc/harbor/ssl/clair_adapter.key
-          subPath: tls.key
+          mountPath: /etc/harbor/ssl/clair
         {{- end }}
         {{- if .Values.caBundleSecretName }}
 {{ include "harbor.caBundleVolumeMount" . | indent 8 }}
         {{- end }}
         {{- end }}
       volumes:
-      - name: config
+      - name: config-in
         secret:
           secretName: "{{ template "harbor.clair" . }}"
+      - name: config
+        emptyDir: {}
       {{- if .Values.internalTLS.enabled }}
       - name: clair-internal-certs
         secret:
