--- a/stable/harbor/templates/portal/deployment.yaml
+++ b/stable/harbor/templates/portal/deployment.yaml
@@ -33,6 +33,7 @@ spec:
 {{- if .Values.portal.serviceAccountName }}
       serviceAccountName: {{ .Values.portal.serviceAccountName }}
 {{- end }}
+      automountServiceAccountToken: false
       containers:
       - name: portal
         image: {{ .Values.portal.image.repository }}:{{ .Values.portal.image.tag }}
@@ -63,14 +64,7 @@ spec:
           subPath: nginx.conf
         {{- if .Values.internalTLS.enabled }}
         - name: portal-internal-certs
-          mountPath: /harbor_cust_cert/harbor_internal_ca.crt
-          subPath: ca.crt
-        - name: portal-internal-certs
-          mountPath: /etc/harbor/tls/portal.crt
-          subPath: tls.crt
-        - name: portal-internal-certs
-          mountPath: /etc/harbor/tls/portal.key
-          subPath: tls.key
+          mountPath: /etc/harbor/ssl/portal
         {{- end }}
       volumes:
       - name: portal-config
