--- a/stable/harbor/templates/redis/statefulset.yaml
+++ b/stable/harbor/templates/redis/statefulset.yaml
@@ -19,11 +19,14 @@ spec:
       labels:
 {{ include "harbor.labels" . | indent 8 }}
         component: redis
-{{- if .Values.redis.podAnnotations }}
       annotations:
+        checksum/secret: {{ include (print $.Template.BasePath "/redis/secret.yaml") . | sha256sum }}
+{{- if .Values.redis.podAnnotations }}
 {{ toYaml .Values.redis.podAnnotations | indent 8 }}
 {{- end }}
     spec:
+      securityContext:
+        fsGroup: 999
 {{- if .Values.redis.internal.serviceAccountName }}
       serviceAccountName: {{ .Values.redis.internal.serviceAccountName }}
 {{- end -}}
@@ -31,6 +34,7 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      automountServiceAccountToken: false
       containers:
       - name: redis
         image: {{ .Values.redis.internal.image.repository }}:{{ .Values.redis.internal.image.tag }}
@@ -49,6 +53,12 @@ spec:
         resources:
 {{ toYaml .Values.redis.internal.resources | indent 10 }}
 {{- end }}
+        env:
+          - name: REDIS_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: "{{ template "harbor.redis" . }}"
+                key: REDIS_PASSWORD
         volumeMounts:
         - name: data
           mountPath: /var/lib/redis
