--- a/stable/harbor/templates/trivy/trivy-sts.yaml
+++ b/stable/harbor/templates/trivy/trivy-sts.yaml
@@ -21,6 +21,7 @@ spec:
         component: trivy
       annotations:
         checksum/secret: {{ include (print $.Template.BasePath "/trivy/trivy-secret.yaml") . | sha256sum }}
+        checksum/secret-redis: {{ include (print $.Template.BasePath "/redis/secret.yaml") . | sha256sum }}
 {{- if and .Values.internalTLS.enabled (eq .Values.internalTLS.certSource "auto") }}
         checksum/tls: {{ include (print $.Template.BasePath "/internal/auto-tls.yaml") . | sha256sum }}
 {{- else if and .Values.internalTLS.enabled (eq .Values.internalTLS.certSource "manual") }}
@@ -37,7 +38,35 @@ spec:
 {{- if .Values.trivy.serviceAccountName }}
       serviceAccountName: {{ .Values.trivy.serviceAccountName }}
 {{- end }}
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 10000
+        fsGroup: 10000
       automountServiceAccountToken: false
+      {{- if or .Values.internalTLS.enabled .Values.caBundleSecretName }}
+      initContainers:
+        - name: "install-certificates"
+          securityContext:
+            runAsNonRoot: false
+            runAsUser: 0
+          image: {{ .Values.trivy.image.repository }}:{{ .Values.trivy.image.tag }}
+          imagePullPolicy: {{ .Values.imagePullPolicy }}
+          command: ["/bin/sh"]
+          args: [
+             '-c',
+             '/usr/bin/harbor-install-cert.sh && cp -ar /var/lib/ca-certificates/* /tmp/ca-certificates' ]
+          volumeMounts:
+          - name: ca-certificates
+            mountPath: /tmp/ca-certificates
+            readOnly: false
+          {{- if .Values.internalTLS.enabled }}
+          - name: trivy-internal-certs
+            mountPath: /etc/harbor/ssl/trivy
+          {{- end }}
+          {{- if .Values.caBundleSecretName }}
+{{ include "harbor.caBundleVolumeMount" . | indent 10 }}
+          {{- end }}
+      {{- end }}
       containers:
         - name: trivy
           image: {{ .Values.trivy.image.repository }}:{{ .Values.trivy.image.tag }}
@@ -83,38 +112,40 @@ spec:
             - name: INTERNAL_TLS_ENABLED
               value: "true"
             - name: SCANNER_API_SERVER_TLS_KEY
-              value: /etc/harbor/ssl/trivy.key
+              value: /etc/harbor/ssl/trivy/tls.key
             - name: SCANNER_API_SERVER_TLS_CERTIFICATE
-              value: /etc/harbor/ssl/trivy.crt
+              value: /etc/harbor/ssl/trivy/tls.crt
             {{- end }}
+            - name: "SCANNER_REDIS_URL"
+              valueFrom:
+                secretKeyRef:
+                  name: {{ template "harbor.redis" . }}
+                  key: REDIS_URL_TRIVY
             - name: "SCANNER_STORE_REDIS_URL"
               valueFrom:
                 secretKeyRef:
-                  name: {{ template "harbor.trivy" . }}
-                  key: redisURL
+                  name: {{ template "harbor.redis" . }}
+                  key: REDIS_URL_TRIVY
             - name: "SCANNER_JOB_QUEUE_REDIS_URL"
               valueFrom:
                 secretKeyRef:
-                  name: {{ template "harbor.trivy" . }}
-                  key: redisURL
+                  name: {{ template "harbor.redis" . }}
+                  key: REDIS_URL_TRIVY
           ports:
             - name: api-server
               containerPort: {{ template "harbor.trivy.containerPort" . }}
           volumeMounts:
+          {{- if or .Values.internalTLS.enabled .Values.caBundleSecretName }}
+          - name: ca-certificates
+            mountPath: /var/lib/ca-certificates
+          {{- end }}
           - name: data
             mountPath: /home/scanner/.cache
             subPath: {{ .Values.persistence.persistentVolumeClaim.trivy.subPath }}
             readOnly: false
           {{- if .Values.internalTLS.enabled }}
           - name: trivy-internal-certs
-            mountPath: /harbor_cust_cert/harbor_internal_ca.crt
-            subPath: ca.crt
-          - name: trivy-internal-certs
-            mountPath: /etc/harbor/ssl/trivy.crt
-            subPath: tls.crt
-          - name: trivy-internal-certs
-            mountPath: /etc/harbor/ssl/trivy.key
-            subPath: tls.key
+            mountPath: /etc/harbor/ssl/trivy
           {{- end }}
           {{- if .Values.caBundleSecretName }}
 {{ include "harbor.caBundleVolumeMount" . | indent 10 }}
@@ -141,6 +172,10 @@ spec:
 {{ toYaml .Values.trivy.resources | indent 12 }}
       {{- if or (or .Values.internalTLS.enabled .Values.caBundleSecretName) (or (not .Values.persistence.enabled) $trivy.existingClaim) }}
       volumes:
+      {{- if or .Values.internalTLS.enabled .Values.caBundleSecretName }}
+      - name: "ca-certificates"
+        emptyDir: {}
+      {{- end }}
       {{- if .Values.internalTLS.enabled }}
       - name: trivy-internal-certs
         secret:
@@ -158,6 +193,18 @@ spec:
           claimName: {{ $trivy.existingClaim }}
       {{- end }}
       {{- end }}
+    {{- with .Values.trivy.nodeSelector }}
+      nodeSelector:
+{{ toYaml . | indent 8 }}
+    {{- end }}
+    {{- with .Values.trivy.affinity }}
+      affinity:
+{{ toYaml . | indent 8 }}
+    {{- end }}
+    {{- with .Values.trivy.tolerations }}
+      tolerations:
+{{ toYaml . | indent 8 }}
+    {{- end }}
 {{- if and .Values.persistence.enabled (not $trivy.existingClaim) }}
   volumeClaimTemplates:
   - metadata:
