--- a/stable/harbor/values.yaml
+++ b/stable/harbor/values.yaml
@@ -628,6 +628,11 @@ notary:
     #  requests:
     #    memory: 256Mi
     #    cpu: 100m
+    nodeSelector: {}
+    tolerations: []
+    affinity: {}
+    ## Additional deployment annotations
+    podAnnotations: {}
   signer:
     # set the service account to be used, default if left empty
     serviceAccountName: ""
@@ -639,11 +644,11 @@ notary:
     #  requests:
     #    memory: 256Mi
     #    cpu: 100m
-  nodeSelector: {}
-  tolerations: []
-  affinity: {}
-  ## Additional deployment annotations
-  podAnnotations: {}
+    nodeSelector: {}
+    tolerations: []
+    affinity: {}
+    ## Additional deployment annotations
+    podAnnotations: {}
   # Fill the name of a kubernetes secret if you want to use your own
   # TLS certificate authority, certificate and private key for notary
   # communications.
@@ -741,6 +746,12 @@ redis:
   podAnnotations: {}
 # Tests that can be executed by using helm test
 tests:
+  # Credentials to be used to authenticate on the DockerHub repository.
+  # All interations from the tests to DockerHub will be made using that account.
+  # For password it is recommended to use an 'Access Token'.
+  dockerCredentials:
+    username: ""
+    password: ""
   api:
     # Enable/disable API tests
     enabled: true
