--- a/stable/harbor/templates/notary/notary-server.yaml
+++ b/stable/harbor/templates/notary/notary-server.yaml
@@ -21,8 +21,8 @@ spec:
         checksum/secret: {{ include (print $.Template.BasePath "/notary/notary-secret.yaml") . | sha256sum }}
         checksum/secret-core: {{ include (print $.Template.BasePath "/core/core-secret.yaml") . | sha256sum }}
         checksum/secret-database: {{ include (print $.Template.BasePath "/database/database-secret.yaml") . | sha256sum }}
-{{- if .Values.notary.podAnnotations }}
-{{ toYaml .Values.notary.podAnnotations | indent 8 }}
+{{- if .Values.notary.server.podAnnotations }}
+{{ toYaml .Values.notary.server.podAnnotations | indent 8 }}
 {{- end }}
     spec:
       securityContext:
@@ -104,15 +104,15 @@ spec:
           {{- else }}
           secretName: {{ template "harbor.notary-server" . }}
           {{- end }}
-    {{- with .Values.notary.nodeSelector }}
+    {{- with .Values.notary.server.nodeSelector }}
       nodeSelector:
 {{ toYaml . | indent 8 }}
     {{- end }}
-    {{- with .Values.notary.affinity }}
+    {{- with .Values.notary.server.affinity }}
       affinity:
 {{ toYaml . | indent 8 }}
     {{- end }}
-    {{- with .Values.notary.tolerations }}
+    {{- with .Values.notary.server.tolerations }}
       tolerations:
 {{ toYaml . | indent 8 }}
     {{- end }}
