Update SUSE Private Registry helm chart to 1.5.2
The 1.5 helm chart version is largely based on the upstream Harbor
1.5 helm chart (https://github.com/goharbor/harbor-helm/tree/v1.5.2).

--- a/stable/harbor/questions.yaml
+++ b/stable/harbor/questions.yaml
@@ -99,7 +99,7 @@ questions:
   label: Select a Secret Holding the Notary TLS Certificate
   show_if: "expose.tls.certSource=secret&&expose.type=ingress"
   group: "Expose TLS Options"
-- variable: internalTLS.enable
+- variable: internalTLS.enabled
   default: false
   required: true
   description: "Use TLS to secure internal communication between Harbor components"
@@ -111,7 +111,7 @@ questions:
   description: "Generate new TLS certificates during post-deployment configuration changes and upgrades"
   type: boolean
   label: Rotate TLS Certificates
-  show_if: "internalTLS.enable=true"
+  show_if: "internalTLS.enabled=true"
   group: "Internal TLS Options"
 # config imageChartStorage type
 - variable: persistence.imageChartStorage.type
