--- a/stable/console/templates/analyzers.yaml
+++ b/stable/console/templates/analyzers.yaml
@@ -67,6 +67,8 @@ spec:
       serviceAccountName: "stratos"
       {{- end }}
       {{- if not .Values.console.reportsVolumeDisabled }}
+      securityContext:
+        runAsNonRoot: false
       volumes:
       - name: data
         persistentVolumeClaim:
