--- a/stable/console/templates/config-init.yaml
+++ b/stable/console/templates/config-init.yaml
@@ -145,6 +145,8 @@ spec:
       serviceAccountName: "config-init"
       {{- end }}
       terminationGracePeriodSeconds: 600
+      securityContext:
+        runAsNonRoot: false
 ---
 {{- if .Values.autoCleanup }}
 # Cleanup job will delete the created secret when the release is deleted
